// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableTable.vue matches snapshot with entries and action col props assigned 1`] = `
"<table>
  <!-- Table col definition -->
  <colgroup>
    <col class=\\"\\">
    <col class=\\"\\">
    <col class=\\"bg-gray-100 dark:bg-gray-800\\">
    <col>
  </colgroup><!-- Table header -->
  <thead>
    <tr>
      <th class=\\"space-x-2 cursor-pointer\\"><span>Title</span><i class=\\"fas\\"></i></th>
      <th class=\\"space-x-2 cursor-pointer\\"><span>Created</span><i class=\\"fas\\"></i></th>
      <th class=\\"bg-white dark:bg-gray-700 space-x-2 cursor-pointer\\"><span>Last modified</span><i class=\\"fas\\"></i></th>
      <!--v-if-->
    </tr>
  </thead><!-- Table body -->
  <tbody>
    <tr>
      <!-- @slot Provides an entry object and the activeSortKey string to allow for building out table the columns. -->
      <td class=\\"\\">B title</td>
      <td class=\\"\\">2013-02-01</td>
      <td class=\\"active\\">2013-10-10</td>
    </tr>
    <tr>
      <!-- @slot Provides an entry object and the activeSortKey string to allow for building out table the columns. -->
      <td class=\\"\\">A title</td>
      <td class=\\"\\">2000-01-01</td>
      <td class=\\"active\\">2014-11-12</td>
    </tr>
  </tbody>
</table>"
`;

exports[`SortableTable.vue matches snapshot with entries but no action col props assigned 1`] = `
"<table>
  <!-- Table col definition -->
  <colgroup>
    <col class=\\"\\">
    <col class=\\"\\">
    <col class=\\"bg-gray-100 dark:bg-gray-800\\">
    <col>
  </colgroup><!-- Table header -->
  <thead>
    <tr>
      <th class=\\"space-x-2 cursor-pointer\\"><span>Title</span><i class=\\"fas\\"></i></th>
      <th class=\\"space-x-2 cursor-pointer\\"><span>Created</span><i class=\\"fas\\"></i></th>
      <th class=\\"bg-white dark:bg-gray-700 space-x-2 cursor-pointer\\"><span>Last modified</span><i class=\\"fas\\"></i></th>
      <th><span>Actions</span></th>
    </tr>
  </thead><!-- Table body -->
  <tbody>
    <tr>
      <!-- @slot Provides an entry object and the activeSortKey string to allow for building out table the columns. -->
      <td class=\\"\\">B title</td>
      <td class=\\"\\">2013-02-01</td>
      <td class=\\"active\\">2013-10-10</td><!-- This is the unsortable action column -->
      <td class=\\"action-col text-right\\"><button class=\\"btn btn-link text-red-300 btn-sm\\"><i class=\\"fas fa-trash\\"></i> Remove entry </button></td>
    </tr>
    <tr>
      <!-- @slot Provides an entry object and the activeSortKey string to allow for building out table the columns. -->
      <td class=\\"\\">A title</td>
      <td class=\\"\\">2000-01-01</td>
      <td class=\\"active\\">2014-11-12</td><!-- This is the unsortable action column -->
      <td class=\\"action-col text-right\\"><button class=\\"btn btn-link text-red-300 btn-sm\\"><i class=\\"fas fa-trash\\"></i> Remove entry </button></td>
    </tr>
  </tbody>
</table>"
`;

exports[`SortableTable.vue matches snapshot with no props assigned 1`] = `
"<table>
  <!-- Table col definition -->
  <colgroup>
    <col>
  </colgroup><!-- Table header -->
  <thead>
    <tr>
      <!--v-if-->
    </tr>
  </thead><!-- Table body -->
  <tbody></tbody>
</table>"
`;
